--- a/views/articles/index.ejs
+++ b/views/articles/index.ejs
@@ -20,6 +20,7 @@
 									<p><%- article.description  %> </p>
 									 <div class="meta">
 										<p class="mb-0"> <%= article.createdAt.toLocaleDateString() %></p>  
+										<div><a href="#"><span class="icon-person"></span> <%-article.author.username  %> </a></div>
 									
 									</div>
 								</div>
