--- a/views/articles/show.ejs
+++ b/views/articles/show.ejs
@@ -46,7 +46,7 @@
                 <h3 class="heading"><a href="#"><%-article.title  %> </a></h3>
                 <div class="meta">
                   <div><a href="#"><span class="icon-calendar"></span> <%= article.createdAt.toLocaleDateString() %></a></div>
-                  <div><a href="#"><span class="icon-person"></span> Username</a></div>
+                  <div><a href="#"><span class="icon-person"></span> <%-article.author.username  %> </a></div>
                   <div><a href="#"><span class="icon-chat"></span> Yorumlar</a></div>
                 </div>
               </div>
